# process-bar-3

./: .dockerignore  .env.example  .plan  Cargo.toml  Dockerfile  PRODUCT.md  README.md  docker-compose.yml
migrations/: 20260428024700_create_notes_table.sql  20260505045100_add_deleted_at_to_notes.sql  20260505063000_create_active_notes_view.sql
src/: config.rs  db.rs  error.rs  flash.rs  lib.rs  main.rs  routes.rs
src/controllers/: mod.rs  notes.rs
src/forms/: mod.rs  note_input.rs
src/middleware/: method_override.rs  mod.rs
src/models/: note.rs
src/templates/: mod.rs
src/views/: flash.rs  mod.rs
static/: app.css
templates/: layout.html
templates/errors/: 404.html  500.html
templates/notes/: _form.html  edit.html  index.html  new.html  show.html
