[package]
name = "process-bar-3"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["chrono", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
